# halftone

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: assemble.yml
conf/: .eslintignore  tsconfig.json  webpack.config.js  webpack.config.ts
src-core/: Cargo.toml
src-core/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  error.rs  main.rs
src-tauri/src/tasks/: invoke.rs  mod.rs  promise.rs
src-ui/: index.html  index.js  index.tsx  sample.ts  styles.css  styles.css.d.ts
src-ui/general/: EitherPromise.tsx
src-ui/halftone/: backend.ts
src-ui/tasks/: PromisifySample.ts  PromisifySample.tsx  backend.ts
