[package]
name = "halftone"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "halftone"
edition = "2018"
build = "src/build.rs"

[dependencies]
halftone-core = { path = "../src-core" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri = { git = "https://github.com/tauri-apps/tauri/", branch = "dev", features = ["api-all"] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

# no need to specify these features in next tauri?
#[features]
#embedded-server = [ "tauri/embedded-server" ]
#no-server = [ "tauri/no-server" ]

[[bin]]
name = "halftone"
path = "src/main.rs"
