[package]
name = "halftone"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "halftone"
edition = "2018"
build = "src/build.rs"

[dependencies]
halftone-core = { path = "../src-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri]
git = "https://github.com/tauri-apps/tauri/"
branch = "dev"
features = ["api-all"]

[build-dependencies.tauri_build]
git = "https://github.com/tauri-apps/tauri/"
branch = "dev"
package = "tauri-build"
features = ["codegen"]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "halftone"
path = "src/main.rs"
