[package]
name = "halftone"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "halftone"
edition = "2018"
build = "src/build.rs"

[dependencies]
halftone-core = { path = "../src-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri]
version = "1.0.0-beta-rc.4"
features = ["api-all"]

[build-dependencies.tauri-build]
version = "1.0.0-beta-rc.1"
features = ["codegen"]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "halftone"
path = "src/main.rs"
